--- a/src/css/style.css
+++ b/src/css/style.css
@@ -252,6 +252,20 @@ ul{
         display: flex;
      
     }
+
+    /* -----imagen */
+    .contenedorPersonal{
+        display: flex;
+        width: 20%;
+        flex-direction: row;
+        align-content: center;
+    }
+  .imagen-personal{
+        width: 6em;
+        border-radius: 4em;
+
+  }
+    /*--------*/
     
     
     
