--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,7 @@
     margin: 0%;
 }
 
+
 #centria-nosotros {
     background: #3A6D9C;
     display: flex;
@@ -135,7 +136,7 @@ li.nav-item:hover img.centria {
 }
 
 body {
-    background: #f9f9f9;
+    background: #ffff;
     color: #0e171c;
     font: 300 100%/1.5em 'Lato', sans-serif;
     margin: 0;
@@ -280,8 +281,6 @@ table {
 .beneficios-div {
     display: flex;
     margin: 20px;
-
-  
     cursor: pointer;
 }
 
@@ -291,6 +290,7 @@ table {
 
 #beneficios:hover {
     box-shadow: 10px 10px 10px #B7C72C;
+    border-radius: 5px;
 }
 
 #integridad:hover {
@@ -337,9 +337,10 @@ table {
 .imagenCumple {
     width: 5%;
     height: 40px !important;
-    position: relative;
+  
     -webkit-animation: rotateAndShrink 3s linear infinite 2.5s;
     animation: rotateAndShrink 3s linear infinite 2.5s;
+    position:fixed
 }
 
 @-webkit-keyframes rotateAndShrink {
@@ -408,6 +409,40 @@ table {
     outline: none !important;
 }
 
+
+.google-calendar{
+    margin:30px;
+}
+
+.imagenCumple {
+    background: #87689B;
+    border-radius: 19px;
+    width: 5%;
+    height: 40px!important;
+    position: relative;
+    -webkit-animation: rotateAndShrink 3s linear infinite 2.5s;
+    animation: rotateAndShrink 3s linear infinite 2.5s;
+}
+.div-acceso-directo{
+   width: 100%;
+    display: flex;
+    
+    
+}
+.div-acceso-directo p {
+    color: black;
+    font-weight: 500;
+}
+
+.cuadrado-ad{
+  
+ margin: 10px;
+ align-self: center;
+
+}
+.cuadrado-ad img {
+    width: 70%;
+}
 @media (max-width: 900px) {
     #centria-nosotros {
         width: 100%;
@@ -452,34 +487,14 @@ table {
         width: 100%;
     }
 }
-.google-calendar{
+
+@media (max-width: 900px) {
+ .contenedor-padre{
+     display: flex;
+     justify-content: flex-start;
+    flex-direction: column;
+ }
+ .google-calendar{
     margin:30px;
 }
-
-.imagenCumple {
-    background: #87689B;
-    border-radius: 19px;
-    width: 5%;
-    height: 40px!important;
-    position: relative;
-    -webkit-animation: rotateAndShrink 3s linear infinite 2.5s;
-    animation: rotateAndShrink 3s linear infinite 2.5s;
-}
-.div-acceso-directo{
-   width: 100%;
-    display: flex;
-    
-    
-}
-.div-acceso-directo p {
-    color: white;
-    font-weight: 500;
-}
-.cuadrado-ad{
- width: 200%;
- height: 20%;
- background: #D68500;
- margin: 10px;
- align-self: center;
-
 }
