--- a/src/css/style.css
+++ b/src/css/style.css
@@ -316,7 +316,8 @@ table {
 
 .imagen-personal {
     width: 6em;
-    border-radius: 4em;
+    padding-top: 0.5em;
+    padding-right: 1em;
 
 }
 
@@ -442,6 +443,19 @@ table {
 }
 .cuadrado-ad img {
     width: 70%;
+}
+.mes{
+    display: flex;
+    justify-content: center;
+    font-size: 2em;
+    padding-bottom: 1em;
+    font-weight: 800;
+    color:rgb(224, 80, 24);
+}
+.contenedorProducto {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 @media (max-width: 900px) {
     #centria-nosotros {
