--- a/src/css/style.css
+++ b/src/css/style.css
@@ -316,8 +316,7 @@ table {
 
 .imagen-personal {
     width: 6em;
-    padding-top: 0.5em;
-    padding-right: 1em;
+    border-radius: 4em;
 
 }
 
@@ -443,19 +442,6 @@ table {
 .cuadrado-ad img {
     width: 70%;
 }
-.mes{
-    display: flex;
-    justify-content: center;
-    font-size: 2em;
-    padding-bottom: 1em;
-    font-weight: 800;
-    color:rgb(224, 80, 24);
-}
-.contenedorProducto {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 @media (max-width: 900px) {
     #centria-nosotros {
         width: 100%;
@@ -580,38 +566,3 @@ table {
     text-align: center;
     padding-bottom: 31px;
 }
-.menu ul {
-    background: rgba(10, 10, 10, 1);
-    display:flex;
-    list-style: none;
-    height: 62px;
-    float: right;
-    align-items: center;
-    padding-left: 0px;
-  }
-  .menu ul ul {
-    display: none;
-  }
-  .menu a {
-    display: block;
-    padding: 19px 33px;
-    color: #fff;
-    font-weight: 600;
-    font-size: 16px;
-    text-decoration: none;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-  }
-  .menu a:hover {
-    background: rgba(80, 78, 78, 0.836);
-    top: 0%;
-    color: #FFFFFF;
-    text-decoration: none;
-  
-  }
-  .menu ul li:hover .uno {
-    display: block;
-    position: absolute;
-    width: 195px;
-    height: 245px;
-    background: rgba(248, 96, 8, 1);
-  }
